--- a/Views/Home/MyView.cshtml
+++ b/Views/Home/MyView.cshtml
@@ -1,6 +1,9 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+
+@model string;
+
 @{
     Layout = null;
 }
@@ -11,9 +14,11 @@
     <title>Index</title>
 </head>
 
-
-
-
+<body>
+    <div>
+        @Model World (from the view)
+    </div>
+</body>
 
 
 </html>
